--- a/src/Lx.SubLib/project.json
+++ b/src/Lx.SubLib/project.json
@@ -2,11 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
-    "Lx.SubLib": {
-      "version": "1.0.0",
-      "target": "project"
-    }
+    "NETStandard.Library": "1.5.0-rc2-24027"
   },
 
   "frameworks": {
